@@ -13,6 +13,9 @@ For a complete change history, please see the CVS log comments.
 CHANGES - Current Version:
 --------------------------
 
+ - Fixed potential memory leaks in error conditions in mitab_feature.cpp
+   and mitab_rawbinblock.cpp (bug 881)
+
  - Support pen width bigger than 7. Note that any pen bigger than 10 are 
    considered as point, not pixel. (bug 683)
 
@@ -601,5 +604,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.130 2004-10-19 14:21:11 jlacroix Exp $
+$Id: HISTORY.TXT,v 1.131 2004-12-01 18:25:03 dmorissette Exp $
 ------------
